--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,4 @@
-.input__container {
+.popup__form {
   all: unset;
   margin: 0 auto;
   width: 358px;
@@ -8,7 +8,7 @@
   gap: 30px;
 }
 @media (max-width: 500px) {
-  .input__container {
+  .popup__form {
     width: 238px;
   }
 }
