--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,12 +1,12 @@
-.input__description {
+.popup__name {
   all: unset;
   opacity: 0.2;
   border-bottom: 1px solid #000000;
+  color: #000000;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
-  color: #000000;
   padding: 0;
   padding-bottom: 13px;
 }
