--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -7,10 +7,11 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 30px;
+  cursor: pointer;
 }
 
 .card__like:hover {
-  opacity: 0.6;
+  opacity: 0.5;
   transition: opacity 1s linear;
 }
 
