--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,9 @@
   background: #000000;
   margin: 0 auto;
   margin-bottom: 36.25px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid #545454;
+  border-bottom-color: rgba(84, 84, 84, 0.7);
 }
 @media (max-width: 400px) {
   .header {
