--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,10 +5,11 @@
   top: -40px;
   width: 32px;
   height: 32px;
-  background-image: url(../../../images/close-button.svg);
+  background-image: url(../../../images/close-icon-320px.svg);
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
+  cursor: pointer;
 }
 @media (max-width: 500px) {
   .popup__close {
@@ -18,6 +19,8 @@
 @media (max-width: 390px) {
   .popup__close {
     left: 250px;
+    width: 20px;
+    height: 20px;
   }
 }
 .popup__close:hover {
