--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
-.popup__name {
+.popup__input {
   all: unset;
-  opacity: 0.2;
   border-bottom: 1px solid #000000;
+  border-bottom-color: rgba(0, 0, 0, 0.2);
   color: #000000;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
