--- a/blocks/popup/__save/popup__save.css
+++ b/blocks/popup/__save/popup__save.css
@@ -1,4 +1,5 @@
 .popup__save {
+  border: 0;
   padding: 0;
   background: #000000;
   border-radius: 2px;
@@ -12,6 +13,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  cursor: pointer;
 }
 @media (max-width: 500px) {
   .popup__save {
@@ -19,6 +21,7 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-bottom: 25px;
   }
 }
 .popup__save:hover {
