--- a/blocks/profile/__desc-profile/profile__desc-profile.css
+++ b/blocks/profile/__desc-profile/profile__desc-profile.css
@@ -5,8 +5,12 @@
   font-size: 18px;
   line-height: 22px;
   grid-area: description;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0;
 }
-@media (max-width: 770px) {
+@media (max-width: 780px) {
   .profile__desc-profile {
     font-size: 14px;
     line-height: 17px;
