--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,13 +10,14 @@
   grid-area: edit-button;
   align-self: center;
   margin-left: 18px;
+  cursor: pointer;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
   transition: opacity 1s linear;
 }
-@media (max-width: 770px) {
+@media (max-width: 780px) {
   .profile__edit-button {
     width: 18px;
     height: 18px;
