--- a/blocks/profile/__desc-profile/profile__desc-profile.css
+++ b/blocks/profile/__desc-profile/profile__desc-profile.css
@@ -1,4 +1,5 @@
 .profile__desc-profile {
+  max-width: 294px;
   color: #ffffff;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 400;
@@ -12,6 +13,7 @@
 }
 @media (max-width: 780px) {
   .profile__desc-profile {
+    max-width: 282px;
     font-size: 14px;
     line-height: 17px;
     margin: 0 auto;
