--- a/pages/index.css
+++ b/pages/index.css
@@ -12,10 +12,13 @@
 @import url(../blocks/profile/__desc-profile/profile__desc-profile.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/cards/cards.css);
+@import url(../blocks/card/card.css);
 @import url(../blocks/card/__block/card__block.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__heading/card__heading.css);
 @import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__like/_active/card__like_active.css);
+@import url(../blocks/card/__trashcan/card__trashcan.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
@@ -28,3 +31,19 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_select/_name.css);
 @import url(../blocks/popup/__input/_select/_description.css);
+@import url(../blocks/popup-add/popup-add.css);
+@import url(../blocks/popup-add/_opened/popup-add_opened.css);
+@import url(../blocks/popup-add/__container/popup-add__container.css);
+@import url(../blocks/popup-add/__close/popup-add__close.css);
+@import url(../blocks/popup-add/__heading/popup-add__heading.css);
+@import url(../blocks/popup-add/__form/popup-add__form.css);
+@import url(../blocks/popup-add/__create-button/popup-add__create-button.css);
+@import url(../blocks/popup-add/__input/popup-add__input.css);
+@import url(../blocks/popup-add/__input/_select/_name.css);
+@import url(../blocks/popup-add/__input/_select/_link.css);
+@import url(../blocks/popup-zoom/popup-zoom.css);
+@import url(../blocks/popup-zoom/_opened/popup-zoom_opened.css);
+@import url(../blocks/popup-zoom/__container/popup-zoom__container.css);
+@import url(../blocks/popup-zoom/__close/popup-zoom__close.css);
+@import url(../blocks/popup-zoom/__image/popup-zoom__image.css);
+@import url(../blocks/popup-zoom/__caption/popup-zoom__caption.css);
