--- a/blocks/card/__heading/card__heading.css
+++ b/blocks/card/__heading/card__heading.css
@@ -1,5 +1,6 @@
 .card__heading {
   color: #000;
+  max-width: 210px;
   margin: 0;
   font-family: "Inter", "Arial", sans-serif;
   font-weight: 900;
