--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -6,15 +6,11 @@
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-  margin-right: 30px;
+  margin-right: 20px;
   cursor: pointer;
 }
 
-.card__like:hover {
+/* .card__like:hover {
   opacity: 0.5;
   transition: opacity 1s linear;
-}
-
-.card__like:focus {
-  background-image: url(../../../images/active-like.svg);
-}
+} */
