--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -12,5 +12,6 @@
     margin-top: 36px;
     grid-template-columns: repeat(1, minmax(282px, max-content));
     justify-content: center;
+    justify-items: center;
   }
 }
