--- a/blocks/popup-zoom/popup-zoom.css
+++ b/blocks/popup-zoom/popup-zoom.css
@@ -1,8 +1,8 @@
-.popup {
+.popup-zoom {
   position: fixed;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.9);
   width: 100%;
   height: 100%;
   display: flex;
