--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 30px;
+  /* gap: 30px; */
 }
 @media (max-width: 500px) {
   .popup__form {
