--- a/pages/index.css
+++ b/pages/index.css
@@ -32,8 +32,12 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_visible/popup__input-error_visible.css);
 @import url(../blocks/popup/__input/_select/_name.css);
 @import url(../blocks/popup/__input/_select/_description.css);
+@import url(../blocks/popup/__input/_type/_error.css);
 @import url(../blocks/popup/__zoom-image/popup__zoom-image.css);
 @import url(../blocks/popup/__zoom-caption/popup__zoom-caption.css);
