--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,11 @@
 .profile__avatar {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 50%;
   margin-right: 30px;
+  z-index: 2;
+  background-color: transparent;
 }
 @media (max-width: 780px) {
   .profile__avatar {
